--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 CMakeCache.txt
 CMakeFiles/
-cmake_install.cmake_install
+cmake_install.cmake
+Makefile
+CTestTestfile.cmake
+
+googletest*/
+lib/*
+simulation
+run_tests
